bug fix
fix bug that causes InstallmentPayment's orderId field to be set as null